[package]
name = "cclang"
version = "0.2.0"
authors = ["Dave Huseby"]
edition = "2018"
description = "An implementation of the crypto construct language"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dhuseby/cclang"


[dependencies]
base64 = "0.11.0"
bs58 = "0.3.0"
bytes = "0.5.4"
gsm = "0.5.0"
hex = "0.4.2"
sodiumoxide = "0.2"
